# CSE165Project

./: .gitignore  CMakeLists.txt  GLWidget.cpp  GLWidget.h  README.md  Window.cpp  Window.h  glwidget.cpp  glwidget.h  main.cpp  resources.qrc  window.cpp
assets/: resources.qrc
assets/bgm/: attribution.txt
assets/shaders/: image.frag  image.vert  text.frag  text.vert
assets/textures/: car.psd  logo.psd  menu.psd  speedometer.psd  start_button.psd  title.psd
entities/: Entity.h
include/: Fonts.h  GLWidget.h  Window.h  window.h
include/commands/: Command.h  GameStats.h  MainMenu.h
include/commands/entities/: CPUVehicle.h  Checkpoint.h  Derek.h  Entity.h  HUD.h  ImageButton.h  ImageEntity.h  Map.h  StartLine.h  TextEntity.h  UserVehicle.h  Vehicle.h
include/entities/: Entity.h  ImageEntity.h  Track.h
src/: Fonts.cpp  GLWidget.cpp  Window.cpp  glwidget.cpp  main.cpp  window.cpp
src/commands/: GameStats.cpp  MainMenu.cpp
src/commands/entities/: CPUVehicle.cpp  Checkpoint.cpp  Derek.cpp  HUD.cpp  ImageButton.cpp  ImageEntity.cpp  Map.cpp  StartLine.cpp  TextEntity.cpp  UserVehicle.cpp  Vehicle.cpp
src/entities/: Derek.cpp  ImageEntity.cpp  Track.cpp
